--- a/main.tex
+++ b/main.tex
@@ -142,7 +142,7 @@ Astafyeva, et al 2018 "CID generation over the epicentral area is not yet quite 
    Van (2011-10-23)			&1.2	&  0.04 &	1.0 m	& 43.51 E & 38.72 N & 7.1 & 13:37 & 156	\\
    
    Kaïkoura (2016-11-13) 	&	1    &  0.06 &	8/4 m &		173.05 E	& 42.74 S	& 7.8 & 22:35 & 78	\\
-   Sanriku (2011 - 03 - 09) 	& 1.5	&  0.04 &	0.3 m &	142.84°E	&		38.42°N	&	7.3& 11:45 & 143\\
+   Sanriku (2011 - 03 - 09) 	& 1.5	&  0.04 &	0.3 m &	142.84 E	&		38.42 N	&	7.3& 11:45 & 143\\
    	
    Pedernales(2016-04-16)	& 5 	& 0.06  &	1.3 m&		79.92 W	&	0.38 N		& 7.8 & 18:38 &113 \\
    
@@ -153,9 +153,28 @@ Astafyeva, et al 2018 "CID generation over the epicentral area is not yet quite 
 
 
 \section{case Study}
-	\subsection{pedernales earthquake}        
-        presentation of pedernales DD:HH, -> epicentre, focal mechanism, rupture size ...
+	\subsection{pedernales earthquake} 
+	\todo[inline]{       
+        presentation of pedernales DD:HH, -\\ epicentre, focal mechanism, rupture size ...
         +reseaux GPS/available data
+        }
+the Pedernales earthquake that took place in the seismic zone around
+of Ecuador-Colombia caused by the subduction of the Nazca oceanic plate under the
+North Andean Silver (NAS) plate (Figure 6). We also see on this figure that Ecuador is
+equipped with a GPS network whose initial purpose is to observe tectonic deformations and
+volcanism in this region. In this area, considering as a fixed reference the plate
+South American, the displacement of the Nazca plate is 8 to 11 mm per year towards the
+Northeast (Nocquet et al., 2014) causing strong earthquakes.
+On April 16, 2016 in Ecuador at 23:58 GMT (18:28 LT) there was an earthquake of magnitude
+7.8 near the coastal town of Muisne (the epicentre being located at 0.38 $\deg$ North and -79.92 $\deg$ East according to
+USGS), causing considerable damage, near the town of Pedernales, 55 km away
+further south. The reverse fault failure (azimuth 29 $/deg$, dip 23 $\deg$) occurs over 100 km long for 40 km wide at a depth of 15 to 30 km over a period of 48 seconds. The
+rupture spread southward with a cumulative peak slip on the fault estimated at 7
+meters, which produced a maximum vertical displacement of 1.2 m reaches about 30 seconds
+after the initiation of the rupture (see Figure ). The data used for this estimate are
+from accelerometers and High Rate GPS (HRGPS) presented in fig.are p.
+
+        
         
 \begin{figure}
 \begin{center}
@@ -338,32 +357,10 @@ Then grid search around the epicentre from 2~\degree East to 2~\degree West and 
 \todo[inline]{ cite Lee2018 Astafyeva2013}
 
 \todo[inline,caption={bibtex Lee 2018}]{
-$@article{lee_kaikoura,
-	author = {Lee, Rebekah F and Rolland, Lucie M and Mikesell, T Dylan},
-doi = {10.1785/0120170299},
-isbn = {0120170299},
-issn = {0037-1106},
-journal = {Bulletin of the Seismological Society of America},
-month = {may},
-year = {2018},
-pages = {1--29},
-title = {Seismo{\-}Ionospheric Observations, Modeling, and Backprojection of the 2016 {Kaikōura} Earthquake},
-url = {https://pubs.geoscienceworld.org/ssa/bssa/article/530731/SeismoIonospheric-Observations-Modeling-and}}$}
-\todo[inline,caption={bibtex Astafyeva 2013}]{$@article{astafyeva_parameters_2013,
-	title = {Parameters of seismic source as deduced from 1 {Hz} ionospheric {GPS} data: {Case} study of the 2011 {Tohoku}-oki event: {IMAGING} {OF} {SEISMIC} {SLIP} {FROM} {IONOSPHERE}},
-	volume = {118},
-	issn = {21699380},
-	shorttitle = {Parameters of seismic source as deduced from 1 {Hz} ionospheric {GPS} data},
-	url = {http://doi.wiley.com/10.1002/jgra.50556},
-	doi = {10.1002/jgra.50556},
-	language = {en},
-	number = {9},
-	urldate = {2018-06-13},
-	journal = {Journal of Geophysical Research: Space Physics},
-	author = {Astafyeva, E. and Rolland, L. and Lognonné, P. and Khelfi, K. and Yahagi, T.},
-	month = sep,
-	year = {2013},
-	pages = {5942--5950}}$}
+% $@article{lee_kaikoura,	author = {Lee, Rebekah F and Rolland, Lucie M and Mikesell, T Dylan},doi = {10.1785/0120170299},isbn = {0120170299},issn = {0037-1106},journal = {Bulletin of the Seismological Society of America},month = {may},year = {2018},pages = {1--29},title = {Seismo{\-}Ionospheric Observations, Modeling, and Backprojection of the 2016 {Kaikōura} Earthquake},url = {https://pubs.geoscienceworld.org/ssa/bssa/article/530731/SeismoIonospheric-Observations-Modeling-and}\\ }
+}
+\todo[inline,caption={bibtex Astafyeva 2013}]{%$@article{astafyeva_parameters_2013,	title = {Parameters of seismic source as deduced from 1 {Hz} ionospheric {GPS} data: {Case} study of the 2011 {Tohoku}-oki event: {IMAGING} {OF} {SEISMIC} {SLIP} {FROM} {IONOSPHERE}},	volume = {118},	issn = {21699380},	shorttitle = {Parameters of seismic source as deduced from 1 {Hz} ionospheric {GPS} data},	url = {http://doi.wiley.com/10.1002/jgra.50556},	doi = {10.1002/jgra.50556},	language = {en},	number = {9},	urldate = {2018-06-13},	journal = {Journal of Geophysical Research: Space Physics},	author = {Astafyeva, E. and Rolland, L. and Lognonné, P. and Khelfi, K. and Yahagi, T.},	month = sep,	year = {2013},	pages = {5942--5950}}$
+	}
     
     
 In order to select the best parameters we study from three different way the differences and similarities between the model and the synthetics
