--- a/main.tex
+++ b/main.tex
@@ -95,24 +95,33 @@ enjeux imager source tsunamis
  
 \section{Introduction}
 
-\fbox{\begin{minipage}{1\linewidth}
+\fbox{\begin{minipage}{1.\linewidth}
 problematic :   Describe importance to monitor eq and subduction zone
  
    State of the art
           see  heki 2018 
-        [olson, 1957] : eq. provokes acoustic vibration as loudspeaker 
+          
+       \done[inline]{ [olson, 1957] : eq. provokes acoustic vibration as loudspeaker }
+        
         [ ] couplage terre/eau/atmo 
+       
         [ ] : N-shape 
-        [Calais, 1995] : use GNSS to study it 
-        [heki , 2005] : 
+        
+        \done[inline]{[Calais, 1995] : use GNSS to study it}
+         
+        [heki , 2005] :
+        
 [????] : relation between uplift and acoustic source
+       
         [ Astafyeva 2011 ]  the wave shape is linked to the magnitude
+       
         [ Rolland 2011 ] we are able to reconstruct the directivity of the perturbation knowing the GNSS satellite position and the magnitic field above the rupture
+        
         [Lee, 2018] the localisation of the acoustic source is important when we try to reconstruct the arrival time of the perturbation. moreover we cannot place the acoustic source at the epicentre for all eq. 
 
  what can we do :  help select a rupture model / ground displacement
-*what is the sensitivity of Seismic CID to model  parameters ?
 
+what is the sensitivity of Seismic CID to model  parameters ?
   \todo[inline]{Why is it important ?}
  \todo[inline]{State of the art}
 See \cite{Heki2018} for a review of the properties of ionospheric disturbances triggered by earthquakes.
@@ -124,10 +133,10 @@ See \cite{Heki2018} for a review of the properties of ionospheric disturbances t
  \item CID and detection
  \end{itemize}
  \end{minipage}}
- \newline
- ~
 \newline
-During the past two decades it became quite common to use Global Navigation Systems (GNSS) to monitor the ionospheric Total Electron Content (TEC) in order to retrieve the Coseismic-Ionospheric-Disturbance (CID) signal of an earthquake. The method first describe by Calais \& Minster \shortcite{Calais1995} consist in the use of a dual frequency GNSS receiver 
+~
+\newline
+During the past two decades it became quite common to use Global Navigation Systems (GNSS) to monitor the ionospheric Total Electron Content (TEC) in order to study the Coseismic-Ionospheric-Disturbance (CID) signal du to earthquakes or volcanic eruptions. In the case of an earthquake this CID is the result of the propagation of an N-shape accoustic wave [citation]provoked by shalow earthquake wich makes the ground oscillate as a loudspeaker cite[olson1957]. One of the major point to study this wave is that it is not attenuated by water. Then it propagates through the atmosphere and reaches the ionosphere, where we can detect it with the method first describe by Calais \& Minster \shortcite{Calais1995} which consist in the use of a dual frequency GNSS receiver to monitor the electron perturbation provoked by the  that follow  or volcanic eruption 
 
 Shallow
 
