--- a/main.tex
+++ b/main.tex
@@ -136,9 +136,7 @@ See \cite{Heki2018} for a review of the properties of ionospheric disturbances t
 \newline
 ~
 \newline
-During the past two decades it became quite common to use Global Navigation Systems (GNSS) to monitor the ionospheric Total Electron Content (TEC) in order to study the Coseismic-Ionospheric-Disturbance (CID) signal du to earthquakes or volcanic eruptions. In the case of an earthquake this CID is the result of the propagation of an N-shape accoustic wave [citation]provoked by shalow earthquake wich makes the ground oscillate as a loudspeaker cite[olson1957]. One of the major point to study this wave is that it is not attenuated by water. Then it propagates through the atmosphere and reaches the ionosphere, where we can detect it with the method first describe by Calais \& Minster \shortcite{Calais1995} which consist in the use of a dual frequency GNSS receiver to monitor the electron perturbation provoked by the  that follow  or volcanic eruption 
-
-Shallow
+During the past two decades it became quite common to use Global Navigation Systems (GNSS) to monitor the ionospheric Total Electron Content (TEC) in order to study the Coseismic-Ionospheric-Disturbance (CID) signal du to earthquakes or volcanic eruptions. In the case of an earthquake this CID is the result of the propagation of an N-shape accoustic wave [citation]provoked by shalow earthquake wich makes the ground oscillate as a loudspeaker cite[olson1957]. One of the major point to study this wave is that it is not attenuated by water. Then it propagates through the atmosphere and reaches the ionosphere, where we can detect it with the method first describe by Calais \& Minster \shortcite{Calais1995} which consist in the use of a dual frequency GNSS receiver to monitor the electron perturbation provoked by the coupling between the acoustic wave and the ionosphere. It's been a while since the linked between the uplift area following an earthquake and the acoustic source of this this waves has been made, one can cite ... [citation]. This uplift is directly linked to the knowledge of the seismic area but is also link to tsunamis generation. this area helps to constrains the rupture systems and propagation. The method commonly in use, uses the sismograms, which have the disavantage they can sature \WM for big earthquakes and needs to be reprocessed. Then a modelisation has to be done to image the ground deformation underwater. Hence, nowadays goal is to enhance the localisation of this uplift.According to cite[astafyeva 2018] the knowledge of the CID generetion over epicentral area is not yet quite sufficient \todo[inline]{check how she write it} , despite cite[lee,2018] show with the modelisation proposed by cite[rolland,2011,2013] that we can enhance the modelisation by moving the acoustic source localisation. We show in this study that a grid search between our model and the observation can be use to find a better acoustci source location than the epicenter with a totaly independant method than the previous one as seismologic invertion, or direct monitoring. In the conclusion we also discuss the viability of this method to perform near-reall time alert system.
 
 Astafyeva, et al 2018 "CID generation over the epicentral area is not yet quite sufficient."
 
@@ -252,7 +250,7 @@ Insert ~ geometry ~ free ~ equation
 % Methodology
 %--------------------------------
 \section{Modelisation} 
-        Idea is to reconstruct the signal assuming N-shape wave produce in 1source point compute the perturbation for multiple receptor and found the acoustic source localisation where the perturbation is reconstructed the best. Following the methods proposed in Rolland et al. (2011,2013) we create an acoustic plane-wave centered on 5 mHz which follows the observed CID see ??? (citation). This wave is an N-shapes waves genreated from a gaussien derivative : 
+        Idea is to reconstruct the signal assuming N-shape wave produce in 1source point compute the perturbation for multiple receptor and found the acoustic source localisation where the perturbation is reconstructed the best. Following the methods proposed in Rolland et al. (2011,2013) we create an acoustic plane-wave centered on 5 mHz which follows the observed CID see ??? (citation). This wave is an N-shapes waves generated from a gaussien derivative : 
       The impulse is an acoustic wave of 5 mHz propagating at sound speed, taking account of the attenuation 
       :\begin{equation}\label{fct_source}
 V_p(t) = \frac{A\sqrt{2}}{\sigma^{\frac{3}{2}}\pi^{\frac{1}{4}}} (t-t_0) \ e^{-\frac{(t-t_0)^{2}}{2(\sigma)^{2}}} 
